enable/disable project actions

don't allow project actions to be triggered
if no project is active

BUG: 445494
(cherry picked from commit 406b67bf6e17416bebda5659c1701c357d7c5271)